test/features/errors/macros/e1402_macro_used_before_definition.spl
# E1402: Macro Used Before Definition

Feature: E1402 - Macro Used Before It Was Defined
  As a Simple compiler
  I want to detect macros used before definition
  So that macro definition order is enforced

  Background:
    Given I have the Simple compiler

  Scenario: Using macro before definition
    When I compile:
      '''
      fn test():
        my_macro!(42)  # Error: used before definition

      macro! my_macro(x):
        print(x)
      '''
    Then I should see error E1402 at line 2
    And the error message should be "macro `{name}` used before it was defined"
    And the label should indicate "used before definition"
    And the note should indicate "macros must be defined before use in the same file"

  Scenario: Valid macro usage after definition
    When I compile:
      '''
      macro! my_macro(x):
        print(x)

      fn test():
        my_macro!(42)  # OK: macro defined first
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        my_macro!(x)

      macro! my_macro(x):
        print(x)
      '''
    Then I should see error E1402
    And the error message should contain "정의 전 사용된 매크로"
